@@ -1297,8 +1297,8 @@ internal rejuvination.
 BEHAVIOR_RESOURCEOVERRIDE=\
 Behavior   : ResourceOverride\n\r\
 Targets    : Rooms, Areas\n\r\
-Parameters : Space delmited list of resources and (for areas) room types list.\n\r\
-Example    : CORN WHEAT RICE\n\r\
+Parameters : min, max ticks, a percent chance, resources and (for areas) room types\n\r\
+Example    : MIN=5 MAX=5 CHANCE=100 CORN WHEAT RICE\n\r\
 Example    : CORN WHEAT RICE ROCKY MOUNTAINS PLAINS\n\r\
 Description: \n\r\
 This class allows one to override the normal resources generated by \
@@ -1308,8 +1308,10 @@ If this behavior is added to an area, you can add to the parameters \
 a list of room types to apply the new resources to.  Room types include: \
 STONE, WOODEN, CAVE, MAGIC, UNDERWATER, AIR, \
 WATERSURFACE,	METAL, CITY, WOODS, ROCKY, PLAINS, UNDERWATER", \
-AIR, WATERSURFACE, JUNGLE, SWAMP, DESERT, HILLS, MOUNTAINS
-
+AIR, WATERSURFACE, JUNGLE, SWAMP, DESERT, HILLS, MOUNTAINS\n\r\
+\n\r\
+When changing the parameters of an existing ResourceOverride on an area, \
+be sure to use RESET AREA to change back any rooms previously affected. 
 
 BEHAVIOR_ROMGANGMEMBER=\
 Behavior   : ROMGangMember\n\r\
